--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "scrapper",
   "version": "1.0.0",
   "description": "",
-  "main": "pl-scrapper.js",
+  "main": "scrapper.js",
   "dependencies": {
     "axios": "^0.19.1",
     "cheerio": "^1.0.0-rc.3",
@@ -13,5 +13,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "mahinsagotra",
-  "license": "ISC"
+  "license": "MIT",
+  "repository": "https://github.com/mahinsagotra/web-scrapper.git"
 }
